--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,10 @@
     <h2>Resume</h2>
     <iframe src="resume.pdf"></iframe>
   </div>
-  <footer>&copy; 2025 Julia Wong. All rights reserved.</footer>
+  <footer>
+  &copy; 2025 Julia Wong. All rights reserved.<br />
+  Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
+</footer>
+
 </body>
 </html>
