--- a/research.html
+++ b/research.html
@@ -17,6 +17,9 @@
     <h2>Research</h2>
     <p>Research content and summaries will go here...</p>
   </div>
-  <footer>&copy; 2025 Julia Wong. All rights reserved.</footer>
+  <footer>
+  &copy; 2025 Julia Wong. All rights reserved.<br />
+  Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
+</footer>
 </body>
 </html>
