--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,9 @@
       <iframe src="https://www.youtube.com/embed/examplevideo"></iframe>
     </div>
   </div>
-  <footer>&copy; 2025 Julia Wong. All rights reserved.</footer>
+  <footer>
+  &copy; 2025 Julia Wong. All rights reserved.<br />
+  Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
+</footer>
 </body>
 </html>
