--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       each project reflects hands-on experience, technical depth, and commitment to real-world problem solving.
     </p>
   </div>
-  <footer>&copy; 2025 Julia Wong. All rights reserved.</footer>
+  <footer>
+  &copy; 2025 Julia Wong. All rights reserved.<br />
+  Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
+</footer>
 </body>
 </html>
