--- a/projects.html
+++ b/projects.html
@@ -13,18 +13,57 @@
     <a href="research.html">Research</a>
     <a href="resume.html">Resume</a>
   </nav>
-  <div class="container">
-    <h2>Projects</h2>
-    <div>
-      <h3>Project Title</h3>
-      <img src="project-image.jpg" alt="Project" />
-      <p>Description of the project goes here...</p>
-      <iframe src="https://www.youtube.com/embed/examplevideo"></iframe>
-    </div>
+  
+  <div class="main-content">
+    <aside class="sidebar-timeline">
+      <h3>Projects Timeline</h3>
+      <ul>
+        <li><a href="#wall-e">2025 WALL-E</a></li>
+        <li><a href="#pinpoint">2024 Pinpoint</a></li>
+        <li><a href="#record-scratch">2023 Record Scratch</a></li>
+        <li><a href="#gigabyte">2022 Gigabyte Battle Bot</a></li>
+        <li><a href="#cat-laser">2021 Arduino Cat Laser</a></li>
+        <li><a href="#usna">2019 USNA Summer STEM</a></li>
+        <li><a href="#apple">2017 Apple Screen Replacements</a></li>
+      </ul>
+    </aside>
+  
+    <section class="content-area">
+      <div id="wall-e" class="project-section">
+        <h2>2025 WALL-E</h2>
+        <p>Project description here...</p>
+      </div>
+      <div id="pinpoint" class="project-section">
+        <h2>2024 Pinpoint</h2>
+        <p>Project description here...</p>
+      </div>
+      <div id="record-scratch" class="project-section">
+        <h2>2023 Record Scratch</h2>
+        <p>Project description here...</p>
+      </div>
+      <div id="gigabyte" class="project-section">
+        <h2>2022 Gigabyte Battle Bot</h2>
+        <p>Project description here...</p>
+      </div>
+      <div id="cat-laser" class="project-section">
+        <h2>2021 Arduino Automatic Cat Laser</h2>
+        <p>Project description here...</p>
+      </div>
+      <div id="usna" class="project-section">
+        <h2>2019 USNA Summer STEM</h2>
+        <p>Project description here...</p>
+      </div>
+      <div id="apple" class="project-section">
+        <h2>2017 Apple Screen Replacements</h2>
+        <p>Project description here...</p>
+      </div>
+    </section>
   </div>
+  
   <footer>
-  &copy; 2025 Julia Wong. All rights reserved.<br />
-  Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
-</footer>
+    &copy; 2025 Julia Wong. All rights reserved.<br />
+    Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
+  </footer>
+
 </body>
 </html>
