--- a/projects.html
+++ b/projects.html
@@ -14,20 +14,21 @@
     <a href="resume.html">Resume</a>
   </nav>
   
-  <div class="project-wrapper">
-    <aside class="timeline-sidebar">
+  <div class="main-content">
+    <aside class="sidebar-timeline">
+      <h3>Projects Timeline</h3>
       <ul>
-        <li><a href="#wall-e"><span class="dot"></span>2025</a></li>
-        <li><a href="#pinpoint"><span class="dot"></span>2024</a></li>
-        <li><a href="#record"><span class="dot"></span>2023</a></li>
-        <li><a href="#gigabyte"><span class="dot"></span>2022</a></li>
-        <li><a href="#cat"><span class="dot"></span>2021</a></li>
-        <li><a href="#usna"><span class="dot"></span>2019</a></li>
-        <li><a href="#apple"><span class="dot"></span>2017</a></li>
+        <li><a href="#wall-e">2025 WALL-E</a></li>
+        <li><a href="#pinpoint">2024 Pinpoint</a></li>
+        <li><a href="#record-scratch">2023 Record Scratch</a></li>
+        <li><a href="#gigabyte">2022 Gigabyte Battle Bot</a></li>
+        <li><a href="#cat-laser">2021 Arduino Cat Laser</a></li>
+        <li><a href="#usna">2019 USNA Summer STEM</a></li>
+        <li><a href="#apple">2017 Apple Screen Replacements</a></li>
       </ul>
     </aside>
-
-    <section class="project-content">
+  
+    <section class="content-area">
       <div id="wall-e" class="project-section">
         <h2>2025 WALL-E</h2>
         <p>Project description here...</p>
@@ -36,7 +37,7 @@
         <h2>2024 Pinpoint</h2>
         <p>Project description here...</p>
       </div>
-      <div id="record" class="project-section">
+      <div id="record-scratch" class="project-section">
         <h2>2023 Record Scratch</h2>
         <p>Project description here...</p>
       </div>
@@ -44,7 +45,7 @@
         <h2>2022 Gigabyte Battle Bot</h2>
         <p>Project description here...</p>
       </div>
-      <div id="cat" class="project-section">
+      <div id="cat-laser" class="project-section">
         <h2>2021 Arduino Automatic Cat Laser</h2>
         <p>Project description here...</p>
       </div>
@@ -58,10 +59,11 @@
       </div>
     </section>
   </div>
-
+  
   <footer>
     &copy; 2025 Julia Wong. All rights reserved.<br />
     Contact: <a href="mailto:juliaewong@gmail.com">juliaewong@gmail.com</a>
   </footer>
+
 </body>
 </html>
