--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <a href="resume.html">Resume</a>
   </nav>
   
-  <div class="main-content">
+  <div class="project-wrapper">
     <aside class="sidebar-timeline">
       <h3>Projects Timeline</h3>
       <ul>
