--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
   </nav>
   
   <div class="project-wrapper">
-    <aside class="sidebar-timeline">
+    <aside class="timeline-sidebar">
       <h3>Projects Timeline</h3>
       <ul>
         <li><a href="#wall-e">2025 WALL-E</a></li>
