--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,12 @@
     <section class="content-area">
       <div id="wall-e" class="project-section">
         <h2>2025 WALL-E</h2>
-        <p>Project description here...</p>
+        <iframe 
+          src="https://sites.google.com/ucsc.edu/mechatronicsgroup15/home" 
+          width="100%" 
+          height="800" 
+          style="border: none;">
+        </iframe>
       </div>
       <div id="pinpoint" class="project-section">
         <h2>2024 Pinpoint</h2>
