--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
       <div id="wall-e" class="project-section">
         <h2>2025 WALL-E</h2>
         <iframe 
-          src="https://sites.google.com/ucsc.edu/mechatronicsgroup15/home" 
+          src="https://sites.google.com/ucsc.edu/mechatronicsgroup15" 
           width="100%" 
           height="800" 
           style="border: none;">
