--- a/projects.html
+++ b/projects.html
@@ -31,12 +31,13 @@
     <section class="content-area">
       <div id="wall-e" class="project-section">
         <h2>2025 WALL-E</h2>
-        <iframe 
-          src="https://sites.google.com/ucsc.edu/mechatronicsgroup15" 
-          width="100%" 
-          height="800" 
-          style="border: none;">
-        </iframe>
+          <p>
+            Visit the full WALL-E project page here:
+            <a href="https://sites.google.com/ucsc.edu/mechatronicsgroup15" target="_blank" rel="noopener">
+              https://sites.google.com/ucsc.edu/mechatronicsgroup15
+            </a>
+          </p>
+          <img src="images/wall-e-preview.png" alt="WALL-E project preview" style="max-width:100%; border-radius: 8px; margin-top: 1em;">
       </div>
       <div id="pinpoint" class="project-section">
         <h2>2024 Pinpoint</h2>
