--- a/projects.html
+++ b/projects.html
@@ -31,14 +31,17 @@
     <section class="content-area">
       <div id="wall-e" class="project-section">
         <h2>2025 WALL-E</h2>
-          <p>
-            Visit the full WALL-E project page here:
-            <a href="https://sites.google.com/ucsc.edu/mechatronicsgroup15" target="_blank" rel="noopener">
-              https://sites.google.com/ucsc.edu/mechatronicsgroup15
-            </a>
-          </p>
-          <img src="images/wall-e-preview.png" alt="WALL-E project preview" style="max-width:100%; border-radius: 8px; margin-top: 1em;">
+        <p>
+          Visit the full WALL-E project page here:
+          <a href="https://sites.google.com/ucsc.edu/mechatronicsgroup15" target="_blank" rel="noopener">
+            https://sites.google.com/ucsc.edu/mechatronicsgroup15
+          </a>
+        </p>
+        
+        <!-- Embedded Home.html from Home folder -->
+        <iframe src="mech/Home.html" width="100%" height="500px" style="border: 1px solid #ccc; margin-top: 1em;"></iframe>
       </div>
+
       <div id="pinpoint" class="project-section">
         <h2>2024 Pinpoint</h2>
         <p>Project description here...</p>
