--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   <div class="container">
     <h1>Julia Wong</h1>
     <p>
-      Welcome to my engineering portfolio. This website showcases selected
-      projects and research in electrical engineering. From hardware design
-      and firmware development to machine learning and biomedical applications,
-      each project reflects hands-on experience, technical depth, and commitment to real-world problem solving.
+      Welcome to my engineering portfolio. This website showcases selected 
+      projects and research in engineering. From hardware design and firmware 
+      development to machine learning and biomedical applications, each 
+      project reflects hands-on experience, technical depth, and commitment 
+      to real-world problem solving.
     </p>
   </div>
   <footer>
