--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
         </p>
         
         <!-- Embedded Home.html from Home folder -->
-        <iframe src="mech/Home.html" width="100%" height="500px" style="border: 1px solid #ccc; margin-top: 1em;"></iframe>
+        <iframe src="assets/mech/Home.html" width="100%" height="500px" style="border: 1px solid #ccc; margin-top: 1em;"></iframe>
       </div>
 
       <div id="pinpoint" class="project-section">
@@ -48,7 +48,8 @@
       </div>
       <div id="record-scratch" class="project-section">
         <h2>2023 Record Scratch</h2>
-        <p>Project description here...</p>
+        <p>Earned second place at Socal Smackdown.</p>
+        <img src="assets/photos/RecordScratch.png" alt="Record Scratch Robot" style="max-width:100%; border-radius: 8px; margin-top: 1em;">
       </div>
       <div id="gigabyte" class="project-section">
         <h2>2022 Gigabyte Battle Bot</h2>
@@ -57,14 +58,23 @@
       <div id="cat-laser" class="project-section">
         <h2>2021 Arduino Automatic Cat Laser</h2>
         <p>Project description here...</p>
+        <video controls width="600">
+          <source src="assets/videos/Tofu.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div id="usna" class="project-section">
         <h2>2019 USNA Summer STEM</h2>
-        <p>Project description here...</p>
+        <p>Julia's first time soldering.</p>
+        <img src="assets/photos/USNA.png" alt="Julia's first time soldering" style="max-width:100%; border-radius: 8px; margin-top: 1em;">
       </div>
       <div id="apple" class="project-section">
         <h2>2017 Apple Screen Replacements</h2>
         <p>Project description here...</p>
+        <video controls width="600">
+          <source src="assets/videos/iPad.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
     </section>
   </div>
