--- a/projects.html
+++ b/projects.html
@@ -49,11 +49,19 @@
       <div id="record-scratch" class="project-section">
         <h2>2023 Record Scratch</h2>
         <p>Earned second place at Socal Smackdown.</p>
-        <img src="assets/photos/RecordScratch.png" alt="Record Scratch Robot" style="max-width:85%; border-radius: 8px; margin-top: 1em;">
+        <img src="assets/photos/RecordScratch.png" alt="Record Scratch Robot" style="max-width:100%; border-radius: 8px; margin-top: 1em;">
       </div>
       <div id="gigabyte" class="project-section">
         <h2>2022 Gigabyte Battle Bot</h2>
         <p>Project description here...</p>
+        <video controls width="350">
+          <source src="assets/videos/GigRide.mov" type="video/mov">
+          Your browser does not support the video tag.
+        </video>
+        <video controls width="350">
+          <source src="assets/videos/GigTest.MOV" type="video/MOV">
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div id="cat-laser" class="project-section">
         <h2>2021 Arduino Automatic Cat Laser</h2>
