--- a/projects.html
+++ b/projects.html
@@ -55,11 +55,11 @@
         <h2>2022 Gigabyte Battle Bot</h2>
         <p>Project description here...</p>
         <video controls width="350">
-          <source src="assets/videos/GigRide.mov" type="video/mov">
+          <source src="assets/videos/GigRide.mov" type="video/quicktime">
           Your browser does not support the video tag.
         </video>
         <video controls width="350">
-          <source src="assets/videos/GigTest.MOV" type="video/MOV">
+          <source src="assets/videos/GigTest.MOV" type="video/quicktime">
           Your browser does not support the video tag.
         </video>
       </div>
